# Lark_aily

./: .env.example  .gitignore  DMSAS_Design.md  README.md  RUNNING.md  pyproject.toml  report.md
src/baf/: __init__.py  cli.py  config.py  orchestrator.py  orchestrator_stream.py
src/baf/agents/: __init__.py  base.py  composer.py  court.py  fix.py  generic.py  incident_commander.py  root_cause.py  scene_router.py  skill_retriever.py  verification.py
src/baf/bitable/: __init__.py  auth.py  client.py  schemas.py
src/baf/demo/: demo_incident.py  seed_skills.py
src/baf/evolution/: __init__.py  aflow_mcts.py  distill.py
src/baf/hooks/: __init__.py  approvals.py
src/baf/llm/: __init__.py  client.py
src/baf/skills/: __init__.py  builtin.py  hub.py
src/baf/storage/: __init__.py  backend.py  bitable_backend.py  mock_backend.py
tests/: test_court_and_evolution.py  test_mock_backend.py  test_orchestrator_e2e.py  test_orchestrator_stream.py  test_scene_router.py
tests/fixtures/: cases.jsonl
